fix: header z-index 수정

--- a/src/assets/scss/components.scss
+++ b/src/assets/scss/components.scss
@@ -34,14 +34,16 @@ body {
   position: sticky;
   left: 0;
   top: 0;
-  z-index: 100;
+  z-index: 1060;
   display: flex;
   justify-content: space-between;
   align-items: center;
   height: 62px;
   padding: 0 20px;
   background: $black1;
-
+  @include xsm {
+    z-index: 100;
+  }
   .header-logo-wrap {
     display: flex;
     align-items: center;
@@ -586,9 +588,7 @@ body {
     }
   }
 }
-.ant-select-dropdown {
-  z-index: 99;
-}
+
 .ant-select-dropdown-menu-item-active:not(
     .ant-select-dropdown-menu-item-disabled
   ) {
